:bug: Fixes 404 on mobile

--- a/src/pages/ErrorPage/NotFoundPage/NotFoundPage.scss
+++ b/src/pages/ErrorPage/NotFoundPage/NotFoundPage.scss
@@ -22,7 +22,11 @@
 
         font-size: 6vh;
 
+        padding: 0 1rem;
+
         color: #464646;
+
+        text-align: center;
     }
 }
 
